// $Id$

CHANGELOG for Media module.
===========================

by aaron: Toggle 'match type' value on media type administrative form.
by aaron: Display administrative options only if we're handling the callback.
by aaron: Add administrative options for match type.
by aaron: Allow administrator to edit existing bundles.
by aaron: Filter media type bundles by stream.
by aaron: Fix various errors.
by aaron: Begin work on formatters.
by aaron: Add medium admin style.
by aaron: Add preview.
by aaron: Hyphens to underscores in #element.
by aaron: Check for existance of data in media_get_fields().
by aaron: Grab proper fields in _media_content_fields().
by aaron: Implement hook_field_schema().
by aaron: Fix error on content type admin page.
by aaron: Begin menu callback for admin/structure/media/.
by aaron: Fix Warning: include_once(): Failed opening 'media_settings.inc' for
  inclusion.
by JacobSingh: Implement of hook_wysiwyg_plugin().
by JacobSingh: Remove hook_permission implementation.
by JacobSingh: Display content type admin overview page: admin/structure/media
by JacobSingh: Tie in MediaEntityController to media_add_files_submit.
by JacobSingh: Add menu callback for media_page_edit.
by JacobSingh: MediaEntityController.php.
by JacobSingh: Add media.fields.inc.
by aaron: Add hacks so that Media: YouTube can work.
by aaron: Attach subtab behaviors.
by aaron: Temporarily hardcode load media youtube js in browser.
by aaron: Integrate browser w/ optional Styles module.
by aaron: Add get_parameters to remote stream wrapper.
by aaron: Allow saving existing streams.
by aaron: Implement ->url_stat() for filesize().
by aaron: Save remote streams.
by aaron: Get MediaReadOnlyStreamWrapper in line with Drupal stream wrappers.
by aaron: Add MediaReadOnlyStreamWrapper.
by aaron: Add media_browser_thumbnails form element.
by aaron: theme_media_browser_thumbnail_radios.
by aaron: Coder review of concatenated spaces.
by aaron: Parameters to hook_form_alter have changed.